# LLMHub

./: .coverage  .env.example  .gitignore  README.md  cafe.json  cli.py  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml  requirements.txt  setup.py  test_system_degradation.py
app/: dependencies.py  main.py  metrics.py
app/api/: endpoints.py  monitoring.py  openai_endpoints.py
app/clients/: redis_client.py
app/core/: __init__.py  canonical.py  config.py  prompts.py
app/db/: database.py
app/middleware/: monitoring.py
app/providers/: MainProviders.py  base.py  gemini_client.py  ollama_client.py  openai_client.py  openrouter_client.py
app/router/: __init__.py  rules.py
app/schemas/: chat.py  openai_chat.py
app/services/: cache_service.py  cost_service.py  llm_services.py
app/static/: LLMHub.html  dashboard.css  dashboard.html  dashboard.js  index.html
docs/: INTEGRATION_GUIDE.md  architecture.md
llmhub_sdk/: __init__.py  client.py
tests/: conftest.py  test_agent_route.py  test_cache_service.py  test_call_provider.py  test_canonical.py  test_cost_service.py  test_get_response.py  test_monitoring_endpoints.py  test_openai_endpoint.py  test_resilience_architecture.py  test_router_rules.py  test_routing.py  test_streaming.py
