[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmhub.ai"
version = "0.1.2"
description = "LLMHub - Open-source multi-provider LLM gateway"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nivaro", email = "hello@llmhub.dev"}
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
llmhub = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "llmhub_sdk*"]
